--- a/labs.fedoraproject.org/data/content/prerelease.html
+++ b/labs.fedoraproject.org/data/content/prerelease.html
@@ -124,7 +124,6 @@
        </div>
 -->
 
-<!--
        <div class="high">
         <div class="row top-margin">
          <div class="col-xs-12 pre-box">
@@ -138,15 +137,14 @@
                 <a class="btn btn-success btn-pre" href="${global_variables.path['download_spins']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/x86_64/iso/Fedora-Python-Classroom-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
                 <h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Python']}</h5>
 	      </div>
-              <div class="col-xs-6 text-center">
-                <a class="btn btn-success btn-pre" href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Python-Classroom-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
-                <h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_Python']}</h5>
-              </div>
+              <!-- <div class="col-xs-6 text-center"> -->
+              <!--   <a class="btn btn-success btn-pre" href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Labs/i386/iso/Fedora-Python-Classroom-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a> -->
+              <!--   <h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_Python']}</h5> -->
+              <!-- </div> -->
             </div>
            </div>
           </div>
        </div>
--->
        
 <!--       <div class="high">
     	  <div class="row top-margin">
@@ -229,9 +227,9 @@
             <div class="col-sm-4 col-xs-12">
               <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">${_('Verify 64bit!')}</a>
             </div>
-            <div class="col-sm-4 col-xs-12">
-              <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-i386-CHECKSUM">${_('Verify 32bit!')}</a>
-            </div>
+            <!-- <div class="col-sm-4 col-xs-12"> -->
+            <!--   <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-i386-CHECKSUM">${_('Verify 32bit!')}</a> -->
+            <!-- </div> -->
           </div>
       </div>
     </div>
