Remove nonexistent Workstation netinstalls and add note

--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -89,6 +89,7 @@
             <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/x86_64/iso/Fedora-Server-netinst-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${_('Download')}</a> | <a href="/verify">${_('Verify')}</a></p>
             </div>
           </div>
+<!--
           <div class="white">
             <div class="col-md-1">
             <img src="/static/images/workstation.png" />
@@ -117,7 +118,11 @@
             <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Workstation/i386/iso/Fedora-Workstation-netinst-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${_('Download')}</a> | <a href="/verify">${_('Verify')}</a></p>
             </div>
           </div>
+	  -->
         </div>
+	<div class="col-md-12">
+	  <p><em>${_('Note: You can select different editions of Fedora to install with this netinstall. You are not limited to Server edition only.')}</em></p>
+	</div>
       </div>
     </div>
   </div>
@@ -145,6 +150,7 @@
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/x86_64/iso/Fedora-Server-netinst-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${_('Download')}</a> | <a href="/verify">${_('Verify')}</a></p>
           </div>
         </div>
+<!--
         <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/workstation.png" />
@@ -163,6 +169,10 @@
           <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Workstation/i386/iso/Fedora-Workstation-netinst-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${_('Download')}</a> | <a href="/verify">${_('Verify')}</a></p>
           </div>
         </div>
+-->
+      </div>
+      <div class="col-xs-12">
+	<p><em>${_('Note: You can select different editions of Fedora to install with this netinstall. You are not limited to Server edition only.')}</em></p>
       </div>
     </div>
   </div>
@@ -192,6 +202,7 @@
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Server/x86_64/iso/Fedora-Server-netinst-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${_('Download')}</a> | <a href="/verify">${_('Verify')}</a></p>
           </div>
         </div>
+<!--
         <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/workstation.png" />
@@ -214,6 +225,10 @@
           <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Workstation/i386/iso/Fedora-Workstation-netinst-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${_('Download')}</a> | <a href="/verify">${_('Verify')}</a></p>
           </div>
         </div>
+-->
+      </div>
+      <div class="col-sm-12">
+	<p><em>${_('Note: You can select different editions of Fedora to install with this netinstall. You are not limited to Server edition only.')}</em></p>
       </div>
     </div>
   </div>
