--- a/labs.fedoraproject.org/data/content/design-suite/download/index.html
+++ b/labs.fedoraproject.org/data/content/design-suite/download/index.html
@@ -18,8 +18,7 @@
       <div class="row">
         <div class="col-md-7 col-md-offset-5 text-left">
           <h2>${Markup(_('Download Fedora %(rel)s Design Suite')) % {'rel':global_variables.release['curr_id']}}</h2>
-          <!--<p class="gr"><a class="btn btn-success design-download-splash" href="${global_variables.path['download_spins']}/${global_variables.release['curr_id']}/Labs/x86_64/iso/Fedora-Design_suite-Live-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso" role="button">${_('Download')}</a></p>-->
-          <p class="gr"><a class="btn btn-success design-download-splash" href="https://download.fedoraproject.org/pub/alt/unofficial/releases/30/x86_64/Fedora-Design_suite-Live-x86_64-30-20190427.n.1.iso" role="button">${_('Download')}</a></p>
+          <p class="gr"><a class="btn btn-success design-download-splash" href="${global_variables.path['download_spins']}/${global_variables.release['curr_id']}/Labs/x86_64/iso/Fedora-Design_suite-Live-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso" role="button">${_('Download')}</a></p>
             <h5>${Markup(_('%s GB ISO Image for 64-bit PC')) % global_variables.iso_size['x86_64_Live_Design']}</h5>
         </div>
       </div>
