--- a/spins.fedoraproject.org/data/content/lxde/download/index.html
+++ b/spins.fedoraproject.org/data/content/lxde/download/index.html
@@ -17,8 +17,7 @@
       <div class="row">
         <div class="col-md-7 col-md-offset-5 text-left">
           <h2>${Markup(_('Download Fedora %(rel)s LXDE Desktop')) % {'rel':global_variables.release['curr_id']}}</h2>
-          <!--<p class="gr"><a class="btn btn-success lxde-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/x86_64/iso/Fedora-LXDE-Live-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso" role="button">${_('Download')}</a></p>-->
-            <p class="gr"><a class="btn btn-success lxde-download-splash" href="https://download.fedoraproject.org/pub/alt/unofficial/releases/30/x86_64/Fedora-LXDE-Live-x86_64-30-20190427.n.0.iso" role="button">${_('Download')}</a></p>
+          <p class="gr"><a class="btn btn-success lxde-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/x86_64/iso/Fedora-LXDE-Live-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso" role="button">${_('Download')}</a></p>
             <h5>${Markup(_('%s GB ISO Image for 64-bit PC')) % global_variables.iso_size['x86_64_Live_LXDE']}</h5>
         </div>
       </div>
