Don't link to things that didn't build.
Fixes #995

--- a/labs.fedoraproject.org/data/content/index.html
+++ b/labs.fedoraproject.org/data/content/index.html
@@ -68,6 +68,7 @@
         </div>
        </div>
 
+<!-- DID NOT BUILD FOR F31
        <div class="row top-margin high">
         <div class="col-md-5 col-md-offset-1 text-center">
           <div class="spin-banner"><a href="/${lang}/scientific"><img class="screenshot-banner" src="${path}/static/images/scientific-banner.png" alt="Scientific Lab banner" /></a></div>
@@ -75,7 +76,9 @@
           <div class="screenshot-text bottom-border"><a href="/${lang}/scientific"><h3>${_('Open source scientific computing.')}</h3></a>
           <span class="grey">${_('A bundle of open source scientific and numerical tools used in research.')}</span></div>
         </div>
+-->
 
+<!-- DID NOT BUILD FOR F31
         <div class="col-md-5 text-center">
           <div class="spin-banner"><a href="/${lang}/games"><img class="screenshot-banner" src="${path}/static/images/games-banner.png" alt="Games banner" /></a></div>
           <a href="/${lang}/games"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-games.jpg" alt="Games Screenshot" /></a>
@@ -83,6 +86,7 @@
           <span class="grey">${_('A collection and perfect show-case of the best games available in Fedora.')}</span></div>
         </div>
       </div>
+-->
 
         <!--<div class="col-md-5 text-center">
           <div class="spin-banner"><a href="/${lang}/jam"><img class="screenshot-banner" src="${path}/static/images/jam-banner.png" alt="Jam banner" /></a></div>
@@ -144,6 +148,7 @@
         </div>
       </div>
 
+<!-- DID NOT BUILD FOR F31
       <div class="row top-margin">
         <div class="col-xs-12 text-center">
           <div class="spin-banner"><a href="/${lang}/games"><img class="screenshot-banner" src="${path}/static/images/games-banner.png" alt="Games banner" /></a></div>
@@ -152,6 +157,8 @@
           <span class="grey">${_('A collection and perfect show-case of the best games available in Fedora.')}</span></div>
         </div>
       </div>
+-->
+
 <!--
       <div class="row top-margin">
         <div class="col-xs-12 text-center">
@@ -180,6 +187,8 @@
         </div>
       </div>
 -->
+
+<!-- DID NOT BUILD FOR F31
       <div class="row bottom-space top-margin">
         <div class="col-xs-12 text-center">
           <div class="spin-banner"><a href="/${lang}/scientific"><img class="screenshot-banner" src="${path}/static/images/scientific-banner.png" alt="Scientific Lab banner" /></a></div>
@@ -188,6 +197,7 @@
           <span class="grey">${_('A bundle of open source scientific and numerical tools used in research.')}</span></div>
         </div>
       </div>
+-->
 
       <div class="row bottom-space top-margin bottom-space">
         <div class="col-xs-12 text-center">
