Remove the "unofficial" warnings

--- a/labs.fedoraproject.org/data/content/python-classroom/download/index.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/download/index.html
@@ -24,7 +24,7 @@
     </div>
 </header>
 <div class="container download-container top-space">
-  <xi:include href="../../../templates/generic/unofficial.html" />
+<!--  <xi:include href="../../../templates/generic/unofficial.html" /> -->
   <div class="row">
     <div class="col-md-8 text-left bottom-space">
         <p>${Markup(_('The Python Classroom labs comes in 3 variants. A Live Image with GNOME, that can be downloaded on the top of this page, a Docker image and a Vagrant box for headless environments. Learn more about &lt;a href="%s"&gt;Docker&lt;/a&gt; and &lt;a href="%s"&gt;Vagrant&lt;/a&gt; in their documentation.') % ('https://docs.docker.com/get-started/', 'https://www.vagrantup.com/intro/getting-started/'))}</p>
