Restore the Robotics lab, which built for F31.
Fixes #1002

--- a/labs.fedoraproject.org/data/content/index.html
+++ b/labs.fedoraproject.org/data/content/index.html
@@ -97,7 +97,7 @@
 
 	-->
 
-       <div class="row top-margin high bottom-space">
+       <div class="row top-margin high">
         <div class="col-md-5 col-md-offset-1 text-center">
           <div class="spin-banner"><a href="/${lang}/python-classroom"><img class="screenshot-banner" src="${path}/static/images/python-classroom/python-classroom-banner.png" alt="Python Classroom banner" /></a></div>
           <a href="/${lang}/python-classroom"><img class="screenshot" src="${path}/static/images/python-classroom/screenshot-python-classroom.jpg" alt="Python Classroom Screenshot" /></a>
@@ -113,18 +113,14 @@
         </div>
        </div>
  
-
-<!-- these don't have f29 builds...
-
-       <div class="col-md-5 text-center">
+       <div class="row top-margin high bottom-space">
+       <div class="col-md-5 col-md-offset-1 text-center">
           <div class="spin-banner"><a href="/${lang}/robotics"><img class="screenshot-banner" src="${path}/static/images/robotics-suite-banner.png" alt="Robotics banner" /></a></div>
           <a href="/${lang}/robotics"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-robotics.jpg" alt="Robotics Screenshot" /></a>
           <div class="screenshot-text bottom-border"><a href="/${lang}/robotics"><h3>${_('Dive into Robotics.')}</h3></a>
           <span class="grey">${_('A wide variety of free and open robotics software packages for beginners and experts in robotics.')}</span></div>
         </div>
        </div>
-
-  -->
 
       </div>
 	  </div>
