--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -38,7 +38,7 @@
           <h2>What will we do at Flock?</h2>
 <!--          <p>The <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p> -->
           <ul>
-              <li align="left"><b>Communicate the Fedora Strategy.</b> Everyone in Fedora should understand and feel well-aligned with the project's goals, both long-term and tactical. We should all understand the messaging we're using to attract new users and contributors.m</li>
+              <li align="left"><b>Communicate the Fedora Strategy.</b> Everyone in Fedora should understand and feel well-aligned with the project's goals, both long-term and tactical. We should all understand the messaging we're using to attract new users and contributors.</li>
               <li align="left"><b>Plan the Next Strategy.</b> This strategy doesn't come from the top down, or from thin air, and it's not dictated by our sponsors. It comes from the community. Because we're so big and distributed, Flock can't be the only place where we get new ideas, but it is a summit where we present, learn about, and discuss them.</li>
               <li align="left"><b>Build Community Connections and Engagement.</b> We do amazing work as a global project, but there's no substitute for direct human interaction. Flock helps tie us together. In-person discussion, collaboration, and fun social events help us function better on IRC and mailing lists throughout the year.</li>
           </ul>
