--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -437,7 +437,7 @@
             <p>${Markup(_('%sGB dvd iso')) % global_variables.iso_size['ppc64le_Server_DVD']}</p>
             </div>
             <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-dvd-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-dvd-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
           <div class="white">
@@ -451,7 +451,7 @@
             <p>${Markup(_('%sMB netinstall iso')) % global_variables.iso_size['ppc64le_Server_net']}</p>
             </div>
             <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
           <div class="white">
@@ -465,7 +465,7 @@
             <p>${Markup(_('%sMB dvd iso')) % global_variables.iso_size['ppc64le_ev']}</p>
             </div>
             <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Everything/ppc64le/iso/Fedora-Everything-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-ppc64le-CHECKSUM">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Everything/ppc64le/iso/Fedora-Everything-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-ppc64le-CHECKSUM">${_('Verify')}</a></p>
             </div>
           </div>
           <div class="white">
@@ -479,7 +479,7 @@
             <p>${Markup(_('%sMB qcow2 image')) % global_variables.iso_size['ppc64le_qcow2']}</p>
             </div>
             <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Cloud/ppc64le/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Cloud/ppc64le/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.ppc64le.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
           <div class="white">
@@ -493,7 +493,7 @@
             <p>${Markup(_('%sMB raw image')) % global_variables.iso_size['ppc64le_raw']}</p>
             </div>
             <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Cloud/ppc64le/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Cloud/ppc64le/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.ppc64le.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
           <div class="white">
@@ -507,7 +507,7 @@
             <p>${Markup(_('%sMB Container image')) % global_variables.iso_size['ppc64le_Container']}</p>
             </div>
             <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Container/ppc64le/images/Fedora-Container-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Container/ppc64le/images/Fedora-Container-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.ppc64le.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
         </div>
@@ -535,7 +535,7 @@
           </div>
           <div class="col-xs-9">
           <h3>${_('Fedora Server')}</h3>
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-dvd-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-dvd-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -544,7 +544,7 @@
           </div>
           <div class="col-xs-9">
           <h3>${_('Fedora Server')}</h3>
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -553,7 +553,7 @@
           </div>
           <div class="col-xs-9">
           <h3>${_('Everything')}</h3>
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Everything/ppc64le/iso/Fedora-Everything-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-ppc64le-CHECKSUM">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Everything/ppc64le/iso/Fedora-Everything-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-ppc64le-CHECKSUM">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -562,7 +562,7 @@
           </div>
           <div class="col-xs-9">
           <h3>${_('Fedora Cloud')}</h3>
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Cloud/ppc64le/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Cloud/ppc64le/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.ppc64le.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -571,7 +571,7 @@
           </div>
           <div class="col-xs-9">
           <h3>${_('Fedora Cloud')}</h3>
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Cloud/ppc64le/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Cloud/ppc64le/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.ppc64le.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -580,7 +580,7 @@
           </div>
           <div class="col-xs-9">
           <h3>${_('Fedora Container')}</h3>
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Container/ppc64le/images/Fedora-Container-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Container/ppc64le/images/Fedora-Container-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.ppc64le.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
       </div>
@@ -609,7 +609,7 @@
           <h3>${_('Fedora Server')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-dvd-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-dvd-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -620,7 +620,7 @@
           <h3>${_('Fedora Server')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Server/ppc64le/iso/Fedora-Server-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -631,7 +631,7 @@
           <h3>${_('Everything')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Everything/ppc64le/iso/Fedora-Everything-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-ppc64le-CHECKSUM">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Everything/ppc64le/iso/Fedora-Everything-netinst-ppc64le-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.iso">${_('Download')}</a> | <a href="${path}/${lang}/static/checksums/Fedora-Everything-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-ppc64le-CHECKSUM">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -642,7 +642,7 @@
           <h3>${_('Fedora Cloud')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Cloud/ppc64le/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Cloud/ppc64le/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.ppc64le.qcow2">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -653,7 +653,7 @@
           <h3>${_('Fedora Cloud')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Cloud/ppc64le/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Cloud/ppc64le/images/Fedora-Cloud-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.ppc64le.raw.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         <div class="white">
@@ -664,7 +664,7 @@
           <h3>${_('Fedora Container')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Container/ppc64le/images/Fedora-Container-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Container/ppc64le/images/Fedora-Container-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64le']}.ppc64le.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
       </div>
