Update the Python Classroom Lab content.
Fixes #962

--- a/labs.fedoraproject.org/data/content/python-classroom/index.html
+++ b/labs.fedoraproject.org/data/content/python-classroom/index.html
@@ -70,7 +70,7 @@
           <div class="border">
             <img src="${path}/static/images/python-classroom/pypy.png" alt="PyPy Logo" />
             <h4>${Markup(_('Multiple Pythons'))}</h4>
-            <p>${_('Multiple implementations of the Python programming language, including CPython 3.6, 2.7 and PyPy 3.3')}</p>
+            <p>${_('Multiple implementations of the Python programming language, including CPython 3.7 and PyPy 3.5')}</p>
             <a href="https://developer.fedoraproject.org/tech/languages/python/multiple-pythons.html">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
@@ -128,10 +128,10 @@
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-          	<img src="${path}/static/images/python-classroom/ninja-ide.png" alt="Ninja IDE" />
-          	<h4>${_('Ninja IDE')}</h4>
-          	<p>${_('Integrated Development Environment for Python')}</p>
-          	<a href="http://ninja-ide.org/">${Markup(_('Learn More &gt;'))}</a>
+          	<img src="${path}/static/images/python-classroom/mu.png" alt="Mu editor" />
+          	<h4>${_('Mu editor')}</h4>
+          	<p>${_('A simple Python editor for beginner programmers')}</p>
+          	<a href="https://codewith.mu/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
