Correct the link to XFCE docs
Fixes #1012

--- a/spins.fedoraproject.org/data/content/xfce/download/index.html
+++ b/spins.fedoraproject.org/data/content/xfce/download/index.html
@@ -155,7 +155,7 @@
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
-          <p>${Markup(_('Specific documentation and tutorials are available at the &lt;a href="%s"&gt;Xfce project upstream website&lt;/a&gt;.') % ('http://wiki.xfce.org/'))}</p>
+          <p>${Markup(_('Specific documentation and tutorials are available at the &lt;a href="%s"&gt;Xfce project upstream website&lt;/a&gt;.') % ('https://docs.xfce.org/'))}</p>
         </div>
       </div>
       <div class="row top-margin">
