Update with basic info for Detroit 2020

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -20,8 +20,8 @@
           <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div id="welcome" class="non-jumbo text-center">
               <img src="${path}/static/images/flocklogo2.png" alt="Flock"/>
-            <h1>Budapest</h1>
-            <h2>2019</h2>
+            <h1>Detroit</h1>
+            <h2>2020</h2>
           </div>
           </div>
         </div>
@@ -55,11 +55,13 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Schedule</h2>
+          <!--
           <p>
             <strong>The <a href="https://flock2019.sched.com">Flock 2019 schedule</a> is now available!</strong>
           </p>
+          -->
           <h2>Event Dates</h2>
-          <p>Flock will begin the morning of Thursday, August 8. Sessions will continue each day until Sunday, August 11. You should plan to arrive by Wednesday, August 7 and to depart no sooner than Sunday afternoon for the best experience.</p>
+          <p>Flock will begin the morning of Thursday, August 6. Sessions will continue each day until Sunday, August 9. You should plan to arrive by Wednesday, August 5 and to depart no sooner than Sunday afternoon for the best experience.</p>
 
           <table class="calendar">
               <tr>
@@ -78,13 +80,13 @@
                 <td class="flock" colspan="4">Flock</td>
               </tr>
               <tr>
+                <td>Aug <span>3</span></td>
+                <td>Aug <span>4</span></td>
                 <td>Aug <span>5</span></td>
-                <td>Aug <span>6</span></td>
-                <td>Aug <span>7</span></td>
+                <td class="flock">Aug <span>6</span></td>
+                <td class="flock">Aug <span>7</span></td>
                 <td class="flock">Aug <span>8</span></td>
                 <td class="flock">Aug <span>9</span></td>
-                <td class="flock">Aug <span>10</span></td>
-                <td class="flock">Aug <span>11</span></td>
               </tr>
             </table>
 
@@ -112,10 +114,10 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
             <h2>Call for Proposals</h2>
- <!--
+
 	      <p>Coming soon...</p>
+ <!--
             <p>The CfP is now closed and the <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
- -->
             <p>We invite you to submit proposals for talks (25/50 minutes) or workshops( 2 hours),  or hackfests/FADs (half or full day) on topics of importance to the contributor community.</p>
             <p>Topic ideas include:</p>
             <ul>
@@ -143,25 +145,22 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Registration Information</h2>
-<!--
 	  <p>Coming soon...</p>
           <p><mark>Late Registration for Flock is still open.</mark>  You may also register on-site.  Late registrants are not guranteed all benefits of registration including swag and food.  These will provided if we have capacity.  This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2018-tickets-46180853175?aff=es2">Flock 2018 event</a> online now.</p>
           <p>We are no longer issuing visa letters as the event is less than one month away.</p>
--->
 
           <p><mark>Registration for Flock is open.</mark></p>
           <p>This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2019-tickets-55502933769">Flock 2019 event</a> online now. If you need or think you will need a visa letter to attend Flock, please complete the <a href="https://docs.google.com/forms/d/e/1FAIpQLSexQqHA9gN-KuxT6GAxqN-jt3OXRXThh9qREIkowFLUZ0G7tA/viewform">Event Visa Invitation Letter Request Form</a>. Letters can be requested until 1 month before the event.</p>
           <p>Flock 2019 will, again, feature a small optional registration fee to help offset the costs of swag and lunch.  This fee is scaled by country using the <a href="http://www.economist.com/content/big-mac-index">Big Mac Index</a> and is based on a $25 Fee in the United States.</p>
-<!--
           <p>Information about how to apply for travel funding will be released soon. You should go ahead and register before you have received your funding decision.</p>
--->
           <p><mark>All travel funding has been issued.</mark></p>
-<!--
+
           <p><mark>Travel Funding Requests are now being accepted.</mark></p>
           <p>If you need travel funding for Flock, you may apply using the <a href="https://docs.google.com/forms/d/18BYuHS-91gt5_zaNAskn4-aF5cNimshuZzXu4yo_fz4/">funding request form</a>. You should register for Flock as soon as you know you are likely to attend, even if you are waiting on a funding decision or visa letter. Funding decisions begin being made on 1 June, 2019 and will be made on a continuously rolling basis from then.</p>
--->
+
           <p>Attendees who registered and paid the registration fee by July 8, 2019 are included in the count for items that have to be confirmed in advance.  This includes lunch, swag, etc.  If you registered and/or paid after this date, you may not receive all of the benefits of registration.</p>
           <p>If you did not register, you are still welcome to attend the conference and events. However, you may not receive benefits such as lunch and a shirt.</p>
+ -->
 
         </div>
       </div>
@@ -231,16 +230,15 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Venue and Hotel</h2>
-<!--
+
 	  <p>Coming soon...</p>
--->
+<!--
           <div class="col-xs-12 col-md-7">
       <p><a href="https://www.danubiushotels.com/helia">The Danubius Hotel HELIA</a> in Budapest, Hungary is both the conference venue as well as the conference hotel.</p>
 	  <ul style="padding-left: 1em;">
           <li>Flock Conference room rates of <strong>140 EUR/night</strong> per double occupancy room and <strong>128 EUR/night</strong> per single occupancy room have been arranged. Rooms include breakfast, wifi, and unlimited use of the Danubius Premier Fitness Club.</li>
-          <!-- the builder doesn't like this url :(
           <li>To obtain the Flock rate, please <a href="https://booking.danubiushotels.com/ibe/details.aspx?langid=6&propertyid=14787&nights=1&checkin=07/08/2019&group=REDH070819_001&utm_source=ibe&utm_medium=link&utm_campaign=mice">register online</a>.</li>
-          -->
+
           <li>To obtain the Flock rate, please <a href="https://bit.ly/2PtbLOV">register online</a>.</li>
 
     <li><strong>July 4</strong> is the cut-off for our reserved block. If reserving for yourself, please book before then! After this date, rates are best available.</li>
@@ -259,8 +257,10 @@
              Cégjegyzékszám: 01-10-041120<br/>
            </address>
            </div>
+-->
       </div>
     </div>
+
 <!--
       <div class="row">
         <div class="col-xs-12" id="telegram">
@@ -328,5 +328,9 @@
       <hr />
     </div>
 
+    <div id="credits" class="non-jumbo text-center">
+    <p>Detroit photograph by <a href="https://unsplash.com/photos/QsMXXeeCxoU">Justin McAfee on Unsplash</a>.</p>
+    </div>
+    
   </body>
 </html>
