Add social media information
(including the #DetroitFlockCity hashtag at @mattdm's request)

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -172,6 +172,14 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Social</h2>
+            <div class="row">
+            <div class="col-xs-12 col-sm-6">
+              <h3>Social Media</h3>
+              <p>
+                Use the <strong>#FlockToFedora</strong> and <strong>#DetroitFlockCity</strong> hashtags on your preferred social media platforms.
+                Follow <a href="https://twitter.com/fedora">@fedora</a> on Twitter for updates.
+              </p>
+            </div>
             <div class="col-xs-12 col-sm-6">
               <h3>Mailing List</h3>
               <p>
@@ -182,7 +190,9 @@
                 <li><a href="https://lists.fedoraproject.org/archives/list/flock-attendees@lists.fedoraproject.org/">Read the list archives.</a></li>
               </ul>
             </div>
-            <div class="col-xs-12 col-sm-6">
+            </div>
+            <div class="row">
+            <div class="col-xs-12 col-sm-6" id="irc">
               <h3>IRC</h3>
               <p>
                 Our main IRC channel for the event is <a href="https://webchat.freenode.net/?channels=#fedora-flock">#fedora-flock</a> on <strong>irc.freenode.net</strong>.
@@ -193,8 +203,7 @@
 <!-- fixme <li><a href="#">View full list of Flock channels.</a></li> -->
               </ul>
           </div>
-          <div class="row">
-            <div class="col-xs-12" id="telegram">
+            <div class="col-xs-12 col-sm-6" id="telegram">
           <h3>Telegram</h3>
           <p>
             Telegram is used as a quicker way to communicate during the conference with mobile devices and/or laptops. We have an official group you can join to participate in the conference at <strong>@flocktofedora</strong>. You can join by clicking <a href="https://t.me/flocktofedora">this link</a>.
