Add Datto as a Flock sponsor

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -317,6 +317,10 @@
           <p>
             <a href="https://www.opensuse.org/"><img src="../../static/images/opensuse.png"/></a>
           </p>
+          <h3>Silver Level</h3>
+          <p>
+            <a href="https://www.datto.com/"><img src="../../static/images/sponsors/Datto-blue-RGB.png"/></a>
+          </p>
 <!--
           <p>
             <a href="https://www.arm.com/"><img src="../../static/images/Arm_logo_blue_150MN.png"/></a>
